[styles][fix] skills-wrapper overflow

--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -22,6 +22,7 @@
   justify-content: center;
   align-items: center;
   margin: auto;
+  overflow: hidden;
 }
 
 .skillcard-wrapper {
